manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-gpu-demo
  namespace: flask-gpu-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-gpu-demo
  template:
    metadata:
      labels:
        app: flask-gpu-demo
    spec:
      containers:
        - name: flask-gpu-demo
          image: quay.io/ryan_nix/flask-gpu-demo:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
