manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-gpu-demo
  namespace: flask-gpu-demo
spec:
  selector:
    app: flask-gpu-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
