manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-gpu-demo
  namespace: flask-gpu-demo
spec:
  to:
    kind: Service
    name: flask-gpu-demo
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
